# q-ravens

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  debug_workflow.py  pyproject.toml
.claude/: settings.local.json
flows/: Recording 1_2_2026 at 16_02_37.json  simple test carlitos
src/q_ravens/: __init__.py  cli.py
src/q_ravens/agents/: __init__.py  analyzer.py  base.py  designer.py  executor.py  orchestrator.py  reporter.py  visual_agent.py
src/q_ravens/core/: __init__.py  asyncio_compat.py  checkpoint.py  config.py  error_handler.py  exceptions.py  graph.py  human_loop.py  runner.py  state.py  visual_reasoning.py
src/q_ravens/tools/: __init__.py  accessibility.py  actions.py  browser.py  lighthouse.py  vision.py
src/q_ravens/ui/: __init__.py  chat.py  components.py  settings.py
tests/: __init__.py
