[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-ravens"
version = "0.1.0"
description = "Autonomous QA Agent Swarm - AI-powered web application testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Q-Ravens Contributors" }
]
keywords = ["qa", "testing", "ai", "agents", "automation", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agent Framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",

    # LLM Providers
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # Browser Automation
    "playwright>=1.40.0",

    # Image Processing (for SoM overlay)
    "Pillow>=10.0.0",

    # Vector Memory
    "chromadb>=0.4.0",

    # State Persistence
    "langgraph-checkpoint>=2.0.0",
    "aiosqlite>=0.19.0",

    # Configuration & Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Performance & Accessibility Testing (Phase 2)
testing-tools = [
    "axe-selenium-python>=2.1.0",
]

# UI (Phase 3)
ui = [
    "streamlit>=1.30.0",
    "gradio>=4.0.0",
]

[project.scripts]
q-ravens = "q_ravens.cli:app"

[project.urls]
Homepage = "https://github.com/q-ravens/q-ravens"
Documentation = "https://github.com/q-ravens/q-ravens#readme"
Repository = "https://github.com/q-ravens/q-ravens"

[tool.hatch.build.targets.wheel]
packages = ["src/q_ravens"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
